--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -3,7 +3,7 @@
   <div class="row justify-content-center mb-5">
     <div class="col-12 col-lg-9">
         <div class="mb-4">
-            <h1 class="h4 fw-bold mb-3">Settings</h1>
+            <h1 class="h3 fw-bold mb-3">Settings</h1>
             <p class="card-text">PixivFE uses <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies">cookies</a> to store your preferences, which you can change on this page to customize your experience on this instance.</p>
         </div>
 
@@ -17,9 +17,7 @@
 
                                 <button class="btn btn-dark rounded-pill border-0 flex-fill fw-bold mb-1" id="novels-tab" data-bs-toggle="tab" data-bs-target="#novels" type="button" role="tab" aria-controls="novels" aria-selected="false">Novels</button>
 
-                                <button class="btn btn-dark rounded-pill border-0 flex-fill fw-bold mb-1" id="cookie-values-tab" data-bs-toggle="tab" data-bs-target="#cookie-values" type="button" role="tab" aria-controls="cookie-values" aria-selected="false">Cookie values</button>
-
-                                <button class="btn btn-dark rounded-pill border-0 flex-fill fw-bold" id="raw-settings-tab" data-bs-toggle="tab" data-bs-target="#raw-settings" type="button" role="tab" aria-controls="raw-settings" aria-selected="false">Raw settings</button>
+                                <button class="btn btn-dark rounded-pill border-0 flex-fill fw-bold" id="advanced-settings-tab" data-bs-toggle="tab" data-bs-target="#advanced-settings" type="button" role="tab" aria-controls="advanced-settings" aria-selected="false">Advanced settings</button>
                             </nav>
                     </div>
                 <div class="col-12 col-lg-9">
@@ -245,51 +243,52 @@
                             </ul>
                             </div>
 
-                            <!-- Cookie Values Tab -->
-                            <div class="tab-pane fade" id="cookie-values" role="tabpanel" aria-labelledby="cookie-values-tab">
-                            <h2 class="h4 fw-bold mb-4">Cookie values</h2>
-                            <h3 class="h5 fw-bold mb-3">Current cookie values</h3>
-                            <p class="mb-4">
-                                Please note that some cookies here such as ShowArtR18,
-                                ShowArtR18G, and ShowArtAI are for features still under development.
-                            </p>
-                            {{- range k, v := CookieList }}
-                            <div class="mb-3">
-                                <h3 class="h6 fw-bold">{{k}}</h3>
-                                <form action="/settings/set-cookie" method="post" class="row g-2">
-                                <div class="col-auto">
-                                    <input type="hidden" name="key" value="{{k}}" />
-                                    <input type="text" class="form-control" name="value" value="{{v}}" />
-                                </div>
-                                <div class="col-auto">
-                                    <button type="submit" class="btn btn-primary">Set</button>
-                                </div>
-                                </form>
-                            </div>
-                            {{- end }}
-                            </div>
-
-                            <!-- Raw Settings Tab -->
-                            <div class="tab-pane fade" id="raw-settings" role="tabpanel" aria-labelledby="raw-settings-tab">
-                            <h2 class="h4 fw-bold mb-4">Raw settings</h2>
-                            <h3 class="h5 fw-bold mb-3">Raw settings</h3>
-                            <p>
-                                You can save your current cookie values to quickly set your settings on other compatible instances,
-                                or if the current instance's cookies went expired.
-                            </p>
-                            <p>Invalid values will be ignored.</p>
-                            <!-- Save raw settings -->
-                            <form action="/settings/raw" method="post">
+                            <!-- Advanced Settings Tab -->
+                            <div class="tab-pane fade" id="advanced-settings" role="tabpanel" aria-labelledby="advanced-settings-tab">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item bg-body-tertiary p-0 mb-4">
+                                <h2 class="h4 fw-bold mb-4">Advanced settings</h2>
+                                <h3 class="h5 fw-bold mb-3">Cookie values</h3>
+                                <p class="mb-4">
+                                    Please note that some cookies here such as ShowArtR18,
+                                    ShowArtR18G, and ShowArtAI are for features still under development.
+                                </p>
+                                {{- range k, v := CookieList }}
                                 <div class="mb-3">
-                                <textarea class="form-control" name="raw" rows="10">{{range k, v := CookieList}}&#10;{{k}}={{v}}{{end}}
-                                </textarea>
+                                    <h3 class="h6 fw-bold">{{k}}</h3>
+                                    <form action="/settings/set-cookie" method="post" class="row g-2">
+                                    <div class="col-auto">
+                                        <input type="hidden" name="key" value="{{k}}" />
+                                        <input type="text" class="form-control" name="value" value="{{v}}" />
+                                    </div>
+                                    <div class="col-auto">
+                                        <button type="submit" class="btn btn-primary">Set</button>
+                                    </div>
+                                    </form>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Set raw settings</button>
-                            </form>
-                            <!-- Reset all -->
-                            <form action="/settings/reset-all" method="post" class="mt-3">
-                                <button type="submit" class="btn btn-danger">Reset all cookies/preferences</button>
-                            </form>
+                                {{- end }}
+                                </li>
+                                <li class="list-group-item bg-body-tertiary p-0">
+                                <h3 class="h5 fw-bold mb-3">Raw settings</h3>
+                                <p>
+                                    You can save your current cookie values to quickly set your settings on other compatible instances,
+                                    or if the current instance's cookies went expired.
+                                </p>
+                                <p>Invalid values will be ignored.</p>
+                                <!-- Save raw settings -->
+                                <form action="/settings/raw" method="post">
+                                    <div class="mb-3">
+                                    <textarea class="form-control" name="raw" rows="10">{{range k, v := CookieList}}&#10;{{k}}={{v}}{{end}}
+                                    </textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Set raw settings</button>
+                                </form>
+                                <!-- Reset all -->
+                                <form action="/settings/reset-all" method="post" class="mt-3">
+                                    <button type="submit" class="btn btn-danger">Reset all cookies/preferences</button>
+                                </form>
+                                </li>
+                            </ul>
                             </div>
                         </div>
                     </div>
