--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -9,7 +9,7 @@
                 <p>PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
                 <p>This instance is hosted by the owner of <span class="fw-bold">{{ .DomainName }}</span>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
                 <!-- The rest of this column is mostly intended to eliminate weird negative space on this page -->
-                <!-- TODO: put actual content here not just filler -->
+                <!-- TODO: put actual content here -->
                 <!-- The following section is an adapation of Nitter's about page -->
                 <h2 class="h4 fw-bold mb-3">Why use PixivFE?</h2>
                 <p>
@@ -50,9 +50,9 @@
         <div class="col-12 col-lg-6">
     <div class="card card border-0">
     <div class="card-body rounded-5 bg-body-tertiary p-4">
-    <h2 class="h4 fw-bold">Server Information</h2>
+    <h2 class="h4 fw-bold mb-4">Server Information</h2>
     <div class="list-group list-group-flush">
-    <div class="list-group-item bg-body-tertiary py-3 px-0">
+    <div class="list-group-item bg-body-tertiary pt-0 pb-3 px-0">
         <!-- Spacing between the icon + h3 element and the templated in value -->
         <div class="mb-2">
             <i class="bi bi-tag me-2"></i><h3 class="h6 fw-bold d-inline">Version</h3>
@@ -89,7 +89,7 @@
         <p class="text-muted mb-0">The image proxy server used to retrieve images from i.pximg.net</p>
     </div>
 
-    <div class="list-group-item bg-body-tertiary px-0">
+    <div class="list-group-item bg-body-tertiary pt-3 pb-0 px-0">
         <div class="mb-2">
             <i class="bi bi-globe me-2"></i><h3 class="h6 fw-bold d-inline">Accept-Language header</h3>
         </div>
