--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -28,9 +28,14 @@
                             <!-- Account Tab -->
                             <div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item bg-body-tertiary p-0 mb-4">
                                 <h2 class="h4 fw-bold mb-4">Account</h2>
-                                <h3 class="h5 fw-bold mb-3">Login</h3>
+                                <li class="list-group-item bg-body-tertiary pt-0 pb-4 px-0">
+                                <h3 class="h5 fw-bold mb-3">Log in</h3>
+                                <p>
+                                    Log in with your Pixiv account's cookie to access the features below.
+                                    To learn how to obtain your cookie, please see
+                                    <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
+                                </p>
                                 <p>Supported features (for now):</p>
                                 <ul class="mb-3">
                                     <li>Discovery page</li>
@@ -38,28 +43,27 @@
                                     <li>Like/Bookmark</li>
                                 </ul>
                                 <p>
-                                    Log in with your Pixiv account's cookie to access features above.
-                                    To learn how to obtain your cookie, please see
-                                    <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
-                                </p>
-                                <p>
                                     Cookies will be saved on your browser, and will expire after a fixed period of time.
                                 </p>
                                 <form action="/settings/token" method="post">
                                     <div class="mb-3">
-                                    <input type="text" class="form-control" name="token" autocomplete="off" />
+                                      <label for="token" class="form-label"><span class="fw-bold">PixivFE token</span></label>
+                                      <input type="text" class="form-control" id="token" placeholder="123456_AaBbccDDeeFFggHHIiJjkkllmMnnooPP">
+                                      <div id="tokenHelpBlock" class="form-text">
+                                          The underscore separates your member ID (left side) from a random string (right side).
+                                      </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary mb-4">Log in</button>
+                                    <button type="submit" class="btn btn-primary rounded-pill">Log in</button>
                                 </form>
                                 </li>
-                                <li class="list-group-item bg-body-tertiary p-0">
-                                <h3 class="h5 fw-bold mb-3">Logout</h3>
+                                <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
+                                <h3 class="h5 fw-bold mb-3">Log out</h3>
                                 <p>
-                                    To securely end your session, click the 'Logout!' button. This will
+                                    To securely end your session, click the 'Log out!' button. This will
                                     immediately remove your session token.
                                 </p>
                                 <form action="/settings/logout" method="post">
-                                    <button type="submit" class="btn btn-danger">Logout!</button>
+                                    <button type="submit" class="btn btn-danger rounded-pill">Log out!</button>
                                 </form>
                                 </li>
                             </ul>
@@ -68,8 +72,8 @@
                             <!-- Site Tab -->
                             <div class="tab-pane fade" id="site" role="tabpanel" aria-labelledby="site-tab">
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item bg-body-tertiary p-0 mb-4">
                                 <h2 class="h4 fw-bold mb-4">Site</h2>
+                                <li class="list-group-item bg-body-tertiary pt-0 pb-4 px-0">
                                 <h3 class="h5 fw-bold mb-3">Image proxy server</h3>
                                 <p>
                                     Choose how images are loaded in PixivFE by selecting either the built-in
@@ -94,8 +98,7 @@
                                     </div>
                                     {{- end }}
                                     </div>
-                                    <div class="mb-3">
-                                    <div class="accordion" id="allProxiesAccordion">
+                                    <div class="accordion mb-3" id="allProxiesAccordion">
                                         <div class="accordion-item">
                                         <h2 class="accordion-header" id="headingAllProxies">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAllProxies" aria-expanded="false" aria-controls="collapseAllProxies">
@@ -116,7 +119,6 @@
                                         </div>
                                         </div>
                                     </div>
-                                    </div>
                                     <button type="submit" class="btn btn-primary">Use selected proxy</button>
                                 </form>
                                 <form action="/settings/imageServer" method="post" class="mt-4">
@@ -124,10 +126,10 @@
                                     <label for="custom-image-proxy" class="form-label">Custom image proxy server</label>
                                     <input type="text" class="form-control" id="custom-image-proxy" name="image-proxy" required placeholder="https://example.com" autocomplete="off">
                                     </div>
-                                    <button type="submit" class="btn btn-primary mb-4">Use custom proxy</button>
+                                    <button type="submit" class="btn btn-primary">Use custom proxy</button>
                                 </form>
                                 </li>
-                                <li class="list-group-item bg-body-tertiary p-0 mb-4">
+                                <li class="list-group-item bg-body-tertiary py-4 px-0">
                                 <h3 class="h5 fw-bold mb-3">Open artworks in new tab</h3>
                                 <form action="/settings/thumbnailToNewTab" method="post">
                                     <div class="mb-3">
@@ -140,10 +142,10 @@
                                         <label class="form-check-label" for="ttnt-n">No</label>
                                     </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary mb-4">Submit</button>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
                                 </form>
                                 </li>
-                                <li class="list-group-item bg-body-tertiary p-0 mb-4">
+                                <li class="list-group-item bg-body-tertiary py-4 px-0">
                                 <h3 class="h5 fw-bold mb-3">Artwork preview pop-ups</h3>
                                 <p><span class="fw-bold">Requires Javascript.</span></p>
                                 <form action="/settings/artworkPreview" method="post">
@@ -170,10 +172,10 @@
                                         </label>
                                     </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary mb-4">Submit</button>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
                                 </form>
                                 </li>
-                                <li class="list-group-item bg-body-tertiary p-0">
+                                <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
                                 <h3 class="h5 fw-bold mb-3">Filter artworks</h3>
                                 <p>When submitted, unchecked options will be disabled and vice-versa.</p>
                                 <form action="/settings/filter" method="post">
