--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -17,7 +17,6 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <script src="/js/illust-preview.js" defer></script>
   <!-- TODO: figure out custom themes (e.g. charcoal theme) -->
   <!-- <link href="/css/bootstrap-style.css" rel="stylesheet" /> -->
 
@@ -26,10 +25,12 @@
   <script src="/js/htmx@1.9.10.min.js"
     integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"></script> -->
 
+  <!-- TODO: load these JS files only on pages that require them -->
   <script src="/js/illust-preview.js" defer></script>
   <!-- TODO: can be annoying when you accidentally scroll inside a horizontal scroll area instead of the main content -->
   <!-- <script src="/js/horizontal-scroll.js" defer></script> -->
   <script src="/js/comment-pagination.js" defer></script>
+  <script src="/js/proxy-toggle.js" defer></script>
 
   <meta content="summary_large_image" name="twitter:card" />
 
