--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -53,7 +53,7 @@
                                           The underscore separates your member ID (left side) from a random string (right side).
                                       </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary rounded-pill">Log in</button>
+                                    <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Log in</button>
                                 </form>
                                 </li>
                                 <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
@@ -63,7 +63,7 @@
                                     immediately remove your session token.
                                 </p>
                                 <form action="/settings/logout" method="post">
-                                    <button type="submit" class="btn btn-danger rounded-pill">Log out!</button>
+                                    <button type="submit" class="btn btn-danger fw-bold rounded-pill">Log out!</button>
                                 </form>
                                 </li>
                             </ul>
@@ -99,10 +99,6 @@
                                 </p>
                                 {{- end -}}
                                 <form action="/settings/imageServer" method="post">
-                                    <div class="mb-3 form-check form-switch">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="show-all-proxies">
-                                        <label class="form-check-label" for="show-all-proxies">Show all proxy servers</label>
-                                    </div>
                                     <div class="mb-3">
                                         <label for="image-proxy" class="form-label">Select image proxy server</label>
                                         <select class="form-select" id="image-proxy" name="image-proxy" required data-proxy-check-enabled="{{ .ProxyCheckEnabled }}">
@@ -115,12 +111,44 @@
                                             {{- end }}
                                         </select>
                                     </div>
+                                    <div class="mb-3 form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="show-all-proxies">
+                                        <label class="form-check-label" for="show-all-proxies">Show all proxy servers</label>
+                                    </div>
                                     <div class="mb-3">
                                         <label for="custom-image-proxy" class="form-label">Custom image proxy server</label>
                                         <input type="text" class="form-control" id="custom-image-proxy" name="custom-image-proxy" placeholder="https://example.com" autocomplete="off">
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Save</button>
+                                    <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Save</button>
                                 </form>
+                                </li>
+
+                                <li class="list-group-item bg-body-tertiary py-4 px-0">
+                                    <h3 class="h5 fw-bold mb-3">Filter artworks</h3>
+                                    <p>
+                                        Check the boxes below to hide specific types of content. Unchecked
+                                        options will allow the content to be shown.
+                                    </p>
+                                    <form action="/settings/filter" method="post">
+                                        {{- hideR18 := CookieList["pixivfe-HideArtR18"] }}
+                                        {{- hideR18G := CookieList["pixivfe-HideArtR18G"] }}
+                                        {{- hideAI := CookieList["pixivfe-HideArtAI"] }}
+                                        <div class="mb-3">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" id="filter-r18" name="filter-r18" value="1" {{- if hideR18 != "" }}checked{{- end }}>
+                                                <label class="form-check-label" for="filter-r18">Hide R18 (mature) content</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" id="filter-r18g" name="filter-r18g" value="1" {{- if hideR18G != "" }}checked{{- end }}>
+                                                <label class="form-check-label" for="filter-r18g">Hide R18G (explicit) content</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" id="filter-ai" name="filter-ai" value="1" {{- if hideAI != "" }}checked{{- end }}>
+                                                <label class="form-check-label" for="filter-ai">Hide AI-generated artworks</label>
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Save</button>
+                                    </form>
                                 </li>
 
                                 <li class="list-group-item bg-body-tertiary py-4 px-0">
@@ -131,65 +159,50 @@
                                             <input class="form-check-input" type="checkbox" role="switch" id="ttnt-switch" name="ttnt" value="_blank" {{- if ttntValue == "_blank" }}checked{{- end }}>
                                             <label class="form-check-label" for="ttnt-switch">Open in new tab</label>
                                         </div>
-                                        <button type="submit" class="btn btn-primary">Save</button>
+                                        <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Save</button>
                                     </form>
                                 </li>
 
-                                <li class="list-group-item bg-body-tertiary py-4 px-0">
+                                <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
                                 <h3 class="h5 fw-bold mb-3">Artwork preview pop-ups</h3>
-                                <p><span class="fw-bold">Requires Javascript.</span></p>
+                                <!-- <div class="alert alert-warning" role="alert">
+                                    <p class="mb-0">
+                                        <i class="bi bi-exclamation-triangle-fill"></i> This functionality requires JavaScript.
+                                    </p>
+                                </div> -->
+                                <div class="alert alert-warning" role="alert">
+                                    <p class="mb-0">
+                                        <i class="bi bi-exclamation-triangle-fill"></i> This functionality is currently broken and needs to be updated to work with the Bootstrap front-end rewrite.
+                                    </p>
+                                </div>
                                 <form action="/settings/artworkPreview" method="post">
                                     <div class="mb-3">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="app" id="app-c" value="cover">
+                                    <div class="form-check mb-3">
+                                        <input class="form-check-input" type="radio" name="app" id="app-c" value="cover" disabled>
                                         <label class="form-check-label" for="app-c">
                                         Cover
-                                        <small class="d-block text-muted">Open the previewer when you click into the thumbnails</small>
+                                        <div id="app-c-help" class="form-text">Open the previewer when you click into the thumbnails</div>
                                         </label>
                                     </div>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="app" id="app-b" value="button">
+                                    <div class="form-check mb-3">
+                                        <input class="form-check-input" type="radio" name="app" id="app-b" value="button" disabled>
                                         <label class="form-check-label" for="app-b">
                                         Button
-                                        <small class="d-block text-muted">Add a button at the bottom-right of the thumbnails and open the previewer when you click into it</small>
+                                        <div id="app-b-help" class="form-text">Add a button at the bottom-right of the thumbnails and open the previewer when you click into it</div>
                                         </label>
                                     </div>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="app" id="app-d" value="disable">
+                                    <div class="form-check mb-0">
+                                        <input class="form-check-input" type="radio" name="app" id="app-d" value="disable" checked disabled>
                                         <label class="form-check-label" for="app-d">
                                         Disable
-                                        <small class="d-block text-muted">No previewing</small>
+                                        <div id="app-d-help" class="form-text">No previewing</div>
                                         </label>
                                     </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="submit" class="btn btn-secondary fw-bold rounded-pill" disabled>Save</button>
                                 </form>
                                 </li>
 
-                                <li class="list-group-item bg-body-tertiary pt-4 pb-0 px-0">
-                                <h3 class="h5 fw-bold mb-3">Filter artworks</h3>
-                                <p>When submitted, unchecked options will be disabled and vice-versa.</p>
-                                <form action="/settings/filter" method="post">
-                                    {{- hideR18 := CookieList["pixivfe-HideArtR18"] }}
-                                    {{- hideR18G := CookieList["pixivfe-HideArtR18G"] }}
-                                    {{- hideAI := CookieList["pixivfe-HideArtAI"] }}
-                                    <div class="mb-3">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="filter-r18" name="filter-r18" value="1" {{- if hideR18 != "" }}checked{{- end }}>
-                                        <label class="form-check-label" for="filter-r18">Hide R18</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="filter-r18g" name="filter-r18g" value="1" {{- if hideR18G != "" }}checked{{- end }}>
-                                        <label class="form-check-label" for="filter-r18g">Hide R18G</label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="filter-ai" name="filter-ai" value="1" {{- if hideAI != "" }}checked{{- end }}>
-                                        <label class="form-check-label" for="filter-ai">Hide AI-generated artworks</label>
-                                    </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </form>
-                                </li>
                             </ul>
                             </div>
 
@@ -210,7 +223,7 @@
                                         <label class="form-check-label" for="font-type-gothic">Gothic</label>
                                     </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary mb-4">Submit</button>
+                                    <button type="submit" class="btn btn-secondary fw-bold rounded-pill mb-4">Submit</button>
                                 </form>
                                 </li>
                                 <li class="list-group-item bg-body-tertiary p-0">
@@ -230,7 +243,7 @@
                                         <label class="form-check-label" for="tx-ori-n">Don't force (default from Pixiv)</label>
                                     </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Submit</button>
                                 </form>
                                 </li>
                             </ul>
@@ -255,7 +268,7 @@
                                         <input type="text" class="form-control" name="value" value="{{v}}" />
                                     </div>
                                     <div class="col-auto">
-                                        <button type="submit" class="btn btn-primary">Set</button>
+                                        <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Set</button>
                                     </div>
                                     </form>
                                 </div>
@@ -274,7 +287,7 @@
                                     <textarea class="form-control" name="raw" rows="10">{{range k, v := CookieList}}&#10;{{k}}={{v}}{{end}}
                                     </textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Set raw settings</button>
+                                    <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Set raw settings</button>
                                 </form>
                                 <!-- Reset all -->
                                 <form action="/settings/reset-all" method="post" class="mt-3">
