--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -178,21 +178,21 @@
                                         <input class="form-check-input" type="radio" name="app" id="app-c" value="cover" disabled>
                                         <label class="form-check-label" for="app-c">
                                         Cover
-                                        <div id="app-c-help" class="form-text">Open the previewer when you click into the thumbnails</div>
+                                        <div id="app-c-help" class="form-text">Open the previewer when you click into the thumbnails.</div>
                                         </label>
                                     </div>
                                     <div class="form-check mb-3">
                                         <input class="form-check-input" type="radio" name="app" id="app-b" value="button" disabled>
                                         <label class="form-check-label" for="app-b">
                                         Button
-                                        <div id="app-b-help" class="form-text">Add a button at the bottom-right of the thumbnails and open the previewer when you click into it</div>
+                                        <div id="app-b-help" class="form-text">Add a button at the bottom-right of the thumbnails and open the previewer when you click into it.</div>
                                         </label>
                                     </div>
                                     <div class="form-check mb-3">
                                         <input class="form-check-input" type="radio" name="app" id="app-d" value="disable" checked disabled>
                                         <label class="form-check-label" for="app-d">
                                         Disable
-                                        <div id="app-d-help" class="form-text">No previewing</div>
+                                        <div id="app-d-help" class="form-text">No previewing.</div>
                                         </label>
                                     </div>
                                     <button type="submit" class="btn btn-secondary fw-bold rounded-pill" disabled>Save</button>
