use password type for token

--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -48,7 +48,7 @@
                                 <form action="/settings/token" method="post">
                                     <div class="mb-3">
                                       <label for="token" class="form-label"><span class="fw-bold">PixivFE token</span></label>
-                                      <input type="text" class="form-control" id="token" placeholder="123456_AaBbccDDeeFFggHHIiJjkkllmMnnooPP">
+                                      <input type="password" class="form-control" id="token" placeholder="123456_AaBbccDDeeFFggHHIiJjkkllmMnnooPP">
                                       <div id="tokenHelpBlock" class="form-text">
                                           The underscore separates your member ID (left side) from a random string (right side).
                                       </div>
