--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -222,6 +222,36 @@
                                                 <label class="form-check-label" for="font-type-gothic">Gothic</label>
                                                 <div id="font-type-gothic-help" class="form-text">A sans-serif font style that's clean and modern. It's commonly used for easy readability on digital screens.</div>
                                             </div>
+
+                                            <div class="accordion mb-3" id="typeface-samples">
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header" id="heading-typefaces">
+                                                        <button class="accordion-button collapsed bg-dark text-body" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-typefaces" aria-expanded="false" aria-controls="collapse-typefaces">
+                                                            Typeface samples
+                                                        </button>
+                                                    </h2>
+                                                    <!-- TODO: remove the inline styling used here -->
+                                                    <div id="collapse-typefaces" class="accordion-collapse collapse" aria-labelledby="heading-typefaces" data-bs-parent="#typeface-samples">
+                                                        <div class="accordion-body">
+                                                            <div class="row">
+                                                              <div class="col-md-6">
+                                                                  <h3 class="h5 fw-bold mb-3">Mincho</h3>
+                                                                  <p class="mb-0" style="font-family: 'Noto Serif JP', serif;">
+                                                                      吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。
+                                                                  </p>
+                                                              </div>
+                                                                <div class="col-md-6">
+                                                                    <h3 class="h5 fw-bold mb-3">Gothic</h3>
+                                                                    <p class="mb-0" style="font-family: 'Noto Sans JP', sans-serif;">
+                                                                        吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。
+                                                                    </p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                             <button type="submit" class="btn btn-secondary fw-bold rounded-pill">Submit</button>
                                         </form>
                                     </li>
